Add 1918 in return web and json.

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,10 @@
                     <td>{{ .IsEU }}</td>
                 </tr>
                 <tr>
+                    <td class="cell_data_key">Is 1918 network</td>
+                    <td>{{ .Is1918Network }}</td>
+                </tr>
+                <tr>
                     <td class="cell_data_key">Region</td>
                     <td>{{ .Region }}</td>
                 </tr>
